# music-gen.server

./: .gitignore  pyproject.toml  run.sh  setup.sh
launchd/: ai.kortexa.music-gen.plist  ai.kortexa.music-gen.server.plist
scripts/: server.py
src/kortexa/: __init__.py
src/kortexa/music_gen/: __init__.py  config.py  pipelines.py  schemas.py  server.py  sse.py
systemd/: kortexa-ai-music-gen.service
tests/: test.js
