[project]
name = "kortexa-ai-music-gen"
version = "1.0.0"
description = "FastAPI service exposing ACE-Step music generation endpoints"
authors = [
    { name = "kortexa.ai", email = "francip@kortexa.ai" }
]
keywords = ["acestep", "music-generation", "fastapi", "audio"]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "accelerate>=1.12.0",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/kortexa-ai/music-gen.server"
Repository = "https://github.com/kortexa-ai/music-gen.server.git"

[project.scripts]
"kortexa-music-gen" = "scripts.server:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
acestep = { git = "https://github.com/ACE-Step/ACE-Step-1.5.git" }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
